infrastructure/storage/rook/ceph-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard-ingressroute
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.macbytes.io`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          scheme: https
          serversTransport: ceph-dashboard-transport
  tls:
    secretName: ceph-dashboard-tls-certificate
